<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">QAuxiliary</string>
    <string name="xposeddescription">QQ辅助性功能增强 免费软件 请勿盗卖或用于非法用途 by cinit@github</string>
    <string name="res_inject_success">Resources injection success</string>
    <string name="xposed_not_activated">Xposed 未激活</string>
    <string name="xposed_activated">Xposed 已激活</string>
    <string name="edxposed_not_activated">EdXposed 未激活</string>
    <string name="edxposed_activated">EdXposed 已激活</string>
    <string name="taichi_yin_not_activated">太极·阴 未激活</string>
    <string name="taichi_yin_activated">太极·阴 已激活</string>
    <string name="taichi_yang_not_activated">太极·阳 未激活</string>
    <string name="taichi_yang_activated">太极·阳 已激活</string>
    <string name="PageTitle_home">首页</string>
    <string name="PageTitle_dashboard">功能</string>
    <string name="PageTitle_info">关于</string>
    <string name="ModuleEffectiveVersion">模块生效版本</string>
    <string name="announcement">公告</string>
    <string name="github">GitHub</string>
    <string name="BugCheck">故障排查</string>
    <string name="ModuleVersion">模块版本</string>
    <string name="ModuleVersion_tip">更新模块后需要重启目标应用方可生效</string>
    <string name="ModuleSetting">模块设置</string>
    <string name="ModuleSetting_tip_1">请在 QQ / TIM 内进行操作</string>
    <string name="ModuleSetting_tip_2">QQ侧滑 > 设置 > QAuxiliary 即可进入模块设置</string>
    <string name="ModuleSetting_tip_3">暂不支持 国际版</string>
    <string name="qq">QQ</string>
    <string name="tim">TIM</string>
    <string name="qq_lite">QQ极速版</string>
    <string name="tip">提示</string>
    <string name="send_to_ipad">发送到我的iPad</string>
    <string name="action_search">搜索</string>
    <string name="action_copy_all">复制全部</string>
    <string name="action_filter_items">筛选</string>
    <string name="action_calculate_size">计算大小</string>
    <string name="action_refresh">刷新</string>
    <string name="action_share_as_file">以文件分享至其他应用</string>
    <string name="action_save_as_file">保存为文件</string>
    <string name="btn_do_not_show_again">不再显示</string>
    <string name="wsa_warning_dialog_title">警告</string>
    <string name="wsa_warning_dialog_message">使用前详阅\nQAuxiliary 模块并没有完全适配 Windows Subsystem for Android.\n在 WSA 的 QQ/TIM/… 上使用 QAuxiliary 模块时，如果当前界面位于 QAuxiliary 模块的界面（如模块设置，本模块提供的功能的对话框等），请勿移动、拖拽、放大或缩小本应用的窗口，否则会导致应用崩溃。</string>
    <string name="cfg_ui_hot_update_description">热更新可以让您在不手动更新 QAuxiliary 模块的情况下自动保持 QAuxiliary 模块为最新版。如果您不希望使用热更新，可以将热更新通道设置为“禁用”。</string>
    <string name="cfg_ui_hot_update_bug_report_instruction">如果您正在使用老版本 QQ/TIM 且遇到了问题，请积极反馈问题（带上日志以及宿主和模块的版本号），以便我们能够及时修复问题。</string>
    <string name="cfg_ui_hot_update_channel_btn_disabled">禁用\n禁用热更新</string>
    <string name="cfg_ui_hot_update_channel_btn_stable">稳定版\n其实就是“推荐的 CI”，通常不会有问题，更新频率在一个多星期左右</string>
    <string name="cfg_ui_hot_update_channel_btn_beta">Beta\n测试版，可能存在一些功能性问题（如版本不兼容），更新频率一至两天</string>
    <string name="cfg_ui_hot_update_channel_btn_canary">Canary\n持续集成版，仅供开发者测试，代码未经测试，可能存在严重问题，更新由开发者代码提交触发</string>
    <string name="cfg_ui_hot_update_action_btn_action_disabled">禁用\n禁用热更新（禁用新版本检测）</string>
    <string name="cfg_ui_hot_update_action_btn_query_before_update">询问\n发现新版本时询问用户是否更新</string>
    <string name="cfg_ui_hot_update_action_btn_notice_after_update">自动更新\n发现新版本时自动更新，更新完成后通知用户</string>
    <string name="cfg_ui_hot_update_action_btn_auto_update_without_notice">静默更新\n发现新版本时自动更新，并且不通知用户</string>
    <string name="dialog_btn_cancel">取消</string>
    <string name="dialog_tx_risk_control_general_title">风控警告</string>
    <string name="dialog_tx_risk_control_btn_copy_user_uin">复制QQ号</string>
    <string name="dialog_tx_risk_control_btn_copy_troop_uin">复制群号</string>
    <string name="dialog_tx_risk_control_btn_ignore_risk_warning">忽略警告</string>
    <string name="dialog_tx_risk_control_msg_for_add_friend_from_void">由于 QQ 服务器端风控措施的存在，您无法从 QAuxiliary 模块界面打开的用户资料卡加好友。建议您复制对方 QQ 号后通过 QQ 官方的搜索渠道打开此人的资料卡后再发送好友申请。\n如您执意需要从本模块打开的资料卡加好友，请点击“忽略警告”（不推荐），但是请注意，即使您的客户端显示“已发送请求”，对方很可能根本收不到您的好友申请。</string>
    <string name="dialog_tx_risk_control_msg_for_add_group_from_void">由于 QQ 服务器端风控措施的存在，您无法从 QAuxiliary 模块界面打开的群资料卡加群。建议您复制群号后通过 QQ 官方的搜索渠道打开此群的资料卡后再发送加群申请。\n如您执意需要从本模块打开的资料卡加群，请点击“忽略警告”（不推荐），但是请注意，即使您的客户端显示“已发送请求”，管理员一定收不到您的加群申请。</string>
</resources>
