<?xml version="1.0" encoding="utf-8"?>


<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:stateListAnimator="@null">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/topAppBar"
            style="@style/Toolbar"
            app:title="@string/app_name" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/mainV2_activationStatusLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_yellow_solid"
                android:orientation="horizontal"
                android:gravity="center"
                android:paddingLeft="0dp"
                android:paddingTop="18dp"
                android:paddingRight="0dp"
                android:paddingBottom="18dp">

                <ImageView
                    android:id="@+id/mainV2_activationStatusIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_check_circle" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/mainV2_activationStatusTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:text="N/A"
                        android:textColor="@color/whiteTextColor"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/mainV2_activationStatusDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="2dp"
                        android:text="Internal error"
                        android:textColor="@color/whiteTextColor"
                        android:textSize="12sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_trans_border_ripple"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                android:paddingLeft="0dp"
                android:paddingTop="18dp"
                android:paddingRight="0dp"
                android:paddingBottom="18dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_info"
                    app:tint="@color/themeColor" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:text="@string/ModuleVersion"
                        android:textColor="@color/firstTextColor"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/mainTextViewVersion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="2dp"
                        android:text="N/A"
                        android:textColor="@color/secondTextColor"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="4dp"
                        android:text="@string/ModuleVersion_tip"
                        android:textColor="@color/thirdTextColor"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_trans_border_ripple"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                android:paddingLeft="0dp"
                android:paddingTop="18dp"
                android:paddingRight="0dp"
                android:paddingBottom="18dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_settings"
                    app:tint="@color/themeColor" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:text="@string/ModuleSetting"
                        android:textColor="@color/firstTextColor"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="2dp"
                        android:text="@string/ModuleSetting_tip_1"
                        android:textColor="@color/secondTextColor"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="4dp"
                        android:text="@string/ModuleSetting_tip_2"
                        android:textColor="@color/thirdTextColor"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="4dp"
                        android:text="@string/ModuleSetting_tip_3"
                        android:textColor="@color/thirdTextColor"
                        android:textSize="12sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="16dp">

                        <TextView
                            android:id="@+id/mainRelativeLayoutButtonOpenQQ"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:background="@color/nullColor"
                            android:gravity="center"
                            android:onClick="openModuleSettingForHost"
                            android:paddingLeft="0dp"
                            android:paddingTop="2dp"
                            android:paddingRight="0dp"
                            android:paddingBottom="2dp"
                            android:text="@string/qq"
                            android:textColor="@color/themeColor"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/mainRelativeLayoutButtonOpenTIM"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:background="@color/nullColor"
                            android:gravity="center"
                            android:onClick="openModuleSettingForHost"
                            android:paddingLeft="0dp"
                            android:paddingTop="2dp"
                            android:paddingRight="0dp"
                            android:paddingBottom="2dp"
                            android:text="@string/tim"
                            android:textColor="@color/themeColor"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/mainRelativeLayoutButtonOpenQQLite"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:background="@color/nullColor"
                            android:gravity="center"
                            android:onClick="openModuleSettingForHost"
                            android:paddingLeft="0dp"
                            android:paddingTop="2dp"
                            android:paddingRight="0dp"
                            android:paddingBottom="2dp"
                            android:text="@string/qq_lite"
                            android:textColor="@color/themeColor"
                            android:textSize="16sp" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/mainV2_githubRepo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_trans_border_null_ripple"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:onClick="handleClickEvent"
                android:orientation="horizontal"
                android:paddingLeft="0dp"
                android:paddingTop="18dp"
                android:paddingRight="0dp"
                android:paddingBottom="18dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="16dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_github"
                    app:tint="@color/secondTextColor" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:text="@string/github"
                        android:textColor="@color/firstTextColor"
                        android:textSize="16sp" />


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/mainV2_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_trans_border_null_ripple"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:onClick="handleClickEvent"
                android:orientation="horizontal"
                android:paddingLeft="0dp"
                android:paddingTop="18dp"
                android:paddingRight="0dp"
                android:paddingBottom="18dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_help"
                    app:tint="@color/secondTextColor" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:text="@string/tip"
                        android:textColor="@color/firstTextColor"
                        android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/mainV2_troubleshoot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_trans_border_null_ripple"
                android:clickable="true"
                android:onClick="handleClickEvent"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="0dp"
                android:paddingTop="18dp"
                android:paddingRight="0dp"
                android:paddingBottom="18dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_build"
                    app:tint="@color/secondTextColor" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:text="@string/BugCheck"
                        android:textColor="@color/firstTextColor"
                        android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
